enhance TicketBuilder and DatasetCreationController; add prediction functionality and improve dataset handling